--- a/ms-cx-eletronico/src/main/resources/application.properties
+++ b/ms-cx-eletronico/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=cx-ms-eletronico
+spring.application.name=ms-cx-eletronico
 server.port=8101
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #porta estática baleceado pelo Ribbon
-#rh-worker.ribbon.listOfServers=localhost:8001,localhost:8002
+#ms-cx-beneficiario.ribbon.listOfServers=localhost:8001,localhost:8002
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
