Refactoring the project application-web

--- a/ms-cad-beneficiario/src/main/resources/application.properties
+++ b/ms-cad-beneficiario/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ms-cad-beneficiario
 #server.port=8001
 
-#Configura a porta aleatória no eureka-server 
+#Configura dinamicamente a porta no eureka-server 
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
