--- a/ms-cx-eletronico/src/main/resources/application.properties
+++ b/ms-cx-eletronico/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=ms-cx-eletronico
-server.port=8101
+
+#Configura estaticamente a porta no eureka-server 
+#server.port=8101
+
+#Configura dinamicamente a porta no eureka-server 
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #porta estática baleceado pelo Ribbon
 #ms-cx-beneficiario.ribbon.listOfServers=localhost:8001,localhost:8002
+
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
