--- a/application-web/src/main/resources/application.properties
+++ b/application-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=web-application
+spring.application.name=application-web
 
 server.port=8080
 
@@ -7,8 +7,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.profiles.active=test
 spring.jpa.open-in-view=false
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-ribbon.ConnectTimeout=10000
-ribbon.ReadTimeout=20000
+
 
 
