Add profiles test, dev and prod in microsservice

--- a/ms-cad-beneficiario/src/main/resources/application.properties
+++ b/ms-cad-beneficiario/src/main/resources/application.properties
@@ -8,10 +8,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 #Configura a url do servidor eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# Database configuration [banco em memória para fins de testes]
-spring.datasource.url=jdbc:h2:mem:dbbeneficiario
-spring.datasource.username=sa
-spring.datasource.password=
+#configura o profile a ser utilizado pelo o microsserviço
+spring.profiles.active=test
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.open-in-view=false
