Revert "Deploy no heroku"
This reverts commit a482fa10cab4fd7d3316b1705b54f34857c0a235.

--- a/api-gateway-zuul/src/main/resources/application.properties
+++ b/api-gateway-zuul/src/main/resources/application.properties
@@ -6,11 +6,11 @@ server.port=8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #configuração da rota para o microsserviço ms-cad-beneficiario
-zuul.routes.beneficiario.service-id=ms-cad-beneficiario
-zuul.routes.beneficiario.path=/ms-cad-beneficiario/**
+zuul.routes.worker.service-id=ms-cad-beneficiario
+zuul.routes.worker.path=/ms-cad-beneficiario/**
 
 #configuração da rota para o microsserviço ms-cx-eletronico
-zuul.routes.eletronico.service-id=ms-cx-eletronico
-zuul.routes.eletronico.path=/ms-cx-eletronico/** 
+zuul.routes.payroll.service-id=ms-cx-eletronico
+zuul.routes.payroll.path=/ms-cx-eletronico/** 
 
 
