--- a/ms-cad-beneficiario/src/main/resources/application.properties
+++ b/ms-cad-beneficiario/src/main/resources/application.properties
@@ -8,7 +8,10 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 #Configura a url do servidor eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-#configura o profile a ser utilizado pelo o microsserviço
-spring.profiles.active=test
+# Database configuration [banco em memória para fins de testes]
+spring.datasource.url=jdbc:h2:mem:dbbeneficiario
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.open-in-view=false
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
