--- a/ms-cad-beneficiario/src/main/resources/application-dev.properties
+++ b/ms-cad-beneficiario/src/main/resources/application-dev.properties
@@ -1,9 +1,17 @@
 # Database configuration [banco relacional mysql para fins de testes]
-# Database configs - SGDB - mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/api?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=@Admin123
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# Database configs - SGDB - postgres
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=org.hibernate.dialect.PostgreSQL12Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbbeneficiario?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=1234567
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
