Build dos projetos

--- a/ms-cad-beneficiario/src/main/resources/application-prod.properties
+++ b/ms-cad-beneficiario/src/main/resources/application-prod.properties
@@ -1,2 +1,2 @@
-# Database de produção - configs - SGDB - mysql
+# Database de produção - configs - SGDB - postgres
 spring.datasource.url=${DATABASE_URL}
